Rewrite repo with local files

--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>About Us | Scenes & Sets Events - Corporate & MICE Event Management</title>
     <link rel="stylesheet" href="/css/about.css">
     <link rel="stylesheet" href="/css/index.css">
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="preloader-text">
-                <p>Loading Amazing Experiences...</p>
+                <p>Loading ...</p>
             </div>
         </div>
     </div>
@@ -51,7 +51,7 @@
                 </div>
 
                 <ul class="nav-links">
-                    <li><a href="./" class="nav-link">Home</a></li>
+                    <li><a href="/" class="nav-link">Home</a></li>
                     <li><a href="/about/index.html" class="nav-link">About</a></li>
                     <li><a href="/services/" class="nav-link">Services</a></li>
                     <li><a href="#blog" class="nav-link">Blog</a></li>
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <ul class="mobile-nav-links">
-                    <li><a href="./" class="nav-link">Home</a></li>
+                    <li><a href="/" class="nav-link">Home</a></li>
                     <li><a href="/about/index.html" class="nav-link">About</a></li>
                     <li><a href="/services/" class="nav-link">Services</a></li>
                     <li><a href="#blog" class="nav-link">Blog</a></li>
@@ -95,7 +95,7 @@
         <div class="container">
             <div class="about-hero-content" data-aos="fade-up">
                 <nav class="breadcrumb">
-                    <a href="index.html">Home</a>
+                    <a href="/">Home</a>
                     <span class="separator">/</span>
                     <span class="current">About Us</span>
                 </nav>
