--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Scenes & Sets Events | Premium Corporate & MICE Event Management</title>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/home-about.css">
@@ -70,16 +70,7 @@
     <!-- Mobile Menu Overlay -->
     <div class="mobile-menu-overlay">
         <div class="mobile-menu">
-            <div class="mobile-menu-header">
-                <div class="nav-brand">
-                    <img src="/images/sse-logo (1).png" alt="Scenes & Sets Events" class="mobile-logo">
-                    <h3>Scenes & Sets Events</h3>
-                </div>
-                <div class="mobile-close">
-                    <div class="close-line"></div>
-                    <div class="close-line"></div>
-                </div>
-            </div>
+
             <ul class="mobile-nav-links">
                 <li><a href="./" class="nav-link">Home</a></li>
                 <li><a href="/about/index.html" class="nav-link">About</a></li>
