Rewrite repo with local files

--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="preloader-text">
-                <p>Loading ...</p>
+                <p>About us...</p>
             </div>
         </div>
     </div>
@@ -70,22 +70,13 @@
     <!-- Mobile Menu Overlay -->
     <div class="mobile-menu-overlay">
         <div class="mobile-menu">
-            <div class="mobile-menu-header">
-                <div class="nav-brand">
-                    <img src="/images/sse-logo (1).png" alt="Scenes & Sets Events">
-                    <h3>Scenes & Sets Events</h3>
-                </div>
-                <div class="mobile-close">
-                    <div class="close-line"></div>
-                    <div class="close-line"></div>
-                </div>
-            </div>
+
             <ul class="mobile-nav-links">
-                    <li><a href="/" class="nav-link">Home</a></li>
-                    <li><a href="/about/index.html" class="nav-link">About</a></li>
-                    <li><a href="/services/" class="nav-link">Services</a></li>
-                    <li><a href="#blog" class="nav-link">Blog</a></li>
-                    <li><a href="/bookings/simple.html" class="nav-link cta-button">Book Now</a></li>
+                <li><a href="./" class="nav-link">Home</a></li>
+                <li><a href="/about/index.html" class="nav-link">About</a></li>
+                <li><a href="/services/" class="nav-link">Services</a></li>
+                <li><a href="#blog" class="nav-link">Blog</a></li>
+                <li><a href="/bookings/simple.html" class="nav-link cta-button">Book Now</a></li>
             </ul>
         </div>
     </div>
