--- a/index.html
+++ b/index.html
@@ -704,7 +704,9 @@
             <div class="footer-content">
                 <div class="footer-main">
                     <div class="footer-brand">
-                        <img src="/images/sse-logo (1).png" alt="Scenes & Sets Events" class="footer-logo">
+                        
+                        <div class="footer-brand-logo-name"><img src="/images/sse-logo (1).png" alt="Scenes & Sets Events" class="footer-logo">
+                        <h3>Scenes & Sets</h3> </div>
                         <p>Transforming Corporate and MICE Visions into Lasting Experiences across Africa.</p>
                         <div class="social-links">
                             <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
