--- a/services/index.html
+++ b/services/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Our Services | Scenes & Sets Events - Corporate & MICE Event Management</title>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/services.css">
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="preloader-text">
-                <p>Loading Amazing Experiences...</p>
+                <p>Loading services...</p>
             </div>
         </div>
     </div>
@@ -52,8 +52,8 @@
                 </div>
 
                 <ul class="nav-links">
-                    <li><a href="./" class="nav-link">Home</a></li>
-                    <li><a href="/about/index.html" class="nav-link">About</a></li>
+                    <li><a href="/" class="nav-link">Home</a></li>
+                    <li><a href="/about/" class="nav-link">About</a></li>
                     <li><a href="/services/" class="nav-link">Services</a></li>
                     <li><a href="#blog" class="nav-link">Blog</a></li>
                     <li><a href="/bookings/simple.html" class="nav-link cta-button">Book Now</a></li>
@@ -71,22 +71,13 @@
     <!-- Mobile Menu Overlay -->
     <div class="mobile-menu-overlay">
         <div class="mobile-menu">
-            <div class="mobile-menu-header">
-                <div class="nav-brand">
-                    <img src="/images/sse-logo (1).png" alt="Scenes & Sets Events">
-                    <h3>Scenes & Sets Events</h3>
-                </div>
-                <div class="mobile-close">
-                    <div class="close-line"></div>
-                    <div class="close-line"></div>
-                </div>
-            </div>
+
             <ul class="mobile-nav-links">
-                    <li><a href="./" class="nav-link">Home</a></li>
-                    <li><a href="/about/index.html" class="nav-link">About</a></li>
-                    <li><a href="/services/" class="nav-link">Services</a></li>
-                    <li><a href="#blog" class="nav-link">Blog</a></li>
-                    <li><a href="/bookings/simple.html" class="nav-link cta-button">Book Now</a></li>
+                <li><a href="/" class="nav-link">Home</a></li>
+                <li><a href="/about/" class="nav-link">About</a></li>
+                <li><a href="/services/" class="nav-link">Services</a></li>
+                <li><a href="#blog" class="nav-link">Blog</a></li>
+                <li><a href="/bookings/simple.html" class="nav-link cta-button">Book Now</a></li>
             </ul>
         </div>
     </div>
@@ -96,7 +87,7 @@
         <div class="container">
             <div class="services-hero-content" data-aos="fade-up">
                 <nav class="breadcrumb">
-                    <a href="index.html">Home</a>
+                    <a href="/">Home</a>
                     <span class="separator">/</span>
                     <span class="current">Our Services</span>
                 </nav>
