Rewrite repo with local files

--- a/services/index.html
+++ b/services/index.html
@@ -55,7 +55,7 @@
                     <li><a href="/" class="nav-link">Home</a></li>
                     <li><a href="/about/" class="nav-link">About</a></li>
                     <li><a href="/services/" class="nav-link">Services</a></li>
-                    <li><a href="#blog" class="nav-link">Blog</a></li>
+                    <li><a href="/blog/" class="nav-link">Blog</a></li>
                     <li><a href="/bookings/simple.html" class="nav-link cta-button">Book Now</a></li>
                 </ul>
 
@@ -602,8 +602,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2024 Scenes & Sets Events. All rights reserved. | Prepared by BamileByte Technologies &
-                    Ephraim Creations</p>
+                <p>&copy; 2024 Scenes & Sets Events. All rights reserved.</p>
             </div>
         </div>
     </footer>
