--- a/about/index.html
+++ b/about/index.html
@@ -441,7 +441,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 Scenes & Sets Events. All rights reserved. | Prepared by BamileByte Technologies & Ephraim Creations</p>
+                <p>&copy; 2024 Scenes & Sets Events. All rights reserved. </p>
             </div>
         </div>
     </footer>
