--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <li><a href="./" class="nav-link">Home</a></li>
                     <li><a href="/about/index.html" class="nav-link">About</a></li>
                     <li><a href="/services/" class="nav-link">Services</a></li>
-                    <li><a href="#blog" class="nav-link">Blog</a></li>
+                    <li><a href="/blog/" class="nav-link">Blog</a></li>
                     <li><a href="/bookings/simple.html" class="nav-link cta-button">Book Now</a></li>
                 </ul>
 
@@ -75,7 +75,7 @@
                 <li><a href="./" class="nav-link">Home</a></li>
                 <li><a href="/about/index.html" class="nav-link">About</a></li>
                 <li><a href="/services/" class="nav-link">Services</a></li>
-                <li><a href="#blog" class="nav-link">Blog</a></li>
+                <li><a href="/blog/" class="nav-link">Blog</a></li>
                 <li><a href="/bookings/simple.html" class="nav-link cta-button">Book Now</a></li>
             </ul>
         </div>
